# EQ-Proof

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  verify_cli.py
bridges/: spreadsheet_bridge.py
docs/: ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXCEL_BRIDGE.md  ROADMAP.md  SECURITY.md  SPEC.md  UNITS.md  WHITEPAPER.md
eq_proof/: __init__.py  attest.py  constraints.py  diagnose.py  no_net.py  pdf.py  qp.py  repair.py  report.py  schema.json  spec.py  units.py  verify.py
examples/: inputs_budget_bad.json  inputs_energy_units.json  inputs_portfolio_caps.json  inputs_probability3_bad.json  spec_budget_cap.json  spec_energy_units.json  spec_portfolio_caps.json  spec_probability_simplex3.json
keys/: README.md
notebooks/: EQ_Proof.ipynb  eq_proof_debug.ipynb
tests/: test_simplex.py
